--- a/themes/hugo-coder/layouts/self/single.html
+++ b/themes/hugo-coder/layouts/self/single.html
@@ -44,6 +44,10 @@
         <div class="brand-ad-link-line"></div>
       </div> -->
 
+      <div>
+        {{ partial "google_adsense.html" . }}
+      </div>
+
       <div class="article">
         <div class="article-content heti" data-aos="fade-up" data-aos-duration="1500" data-aos-anchor-placement="top-bottom">
           {{ $PATTERN_EMPTY_ALT := "<img src=\"([^\"]+)\" alt=\"([^\"]+)\">" }}
