--- a/themes/hugo-coder/layouts/money/single.html
+++ b/themes/hugo-coder/layouts/money/single.html
@@ -44,7 +44,7 @@
         <div class="brand-ad-link-line"></div>
       </div> -->
 
-      <div>
+      <div style="margin-bottom: 1.5rem;opacity: 70%">
         {{ partial "google_adsense.html" . }}
       </div>
 
