--- a/themes/hugo-coder/layouts/dev/single.html
+++ b/themes/hugo-coder/layouts/dev/single.html
@@ -60,21 +60,41 @@
         <div id="article-info">
           {{ if .GitInfo }}
         <div style="color: #5c7080;font-size: small;font-style: italic;">
+          {{ if eq .Site.Language.Lang "zh-cn" }}
           更新时间:
+          {{ else }}
+          Update time:
+          {{ end }}
           <!-- Calculate the age in days and months -->
           {{ $ageDays := div (sub now.Unix .Page.Lastmod.Unix) 86400 }}
           {{ $ageMonths := div (sub now.Unix .Page.Lastmod.Unix) 2592000 }}
           <!-- Published today -->
           {{ if eq $ageDays 0 }}
-              今日
+              {{ if eq .Site.Language.Lang "zh-cn" }}
+                今日
+              {{ else }}
+                Today
+              {{ end }}
           <!-- Published in the last 31 days -->
           {{ else if lt $ageDays 31 }}
-              {{ $ageDays }}天前
+              {{ if eq .Site.Language.Lang "zh-cn" }}
+                {{ $ageDays }}天前
+              {{ else }}
+                {{ $ageDays }}days ago
+              {{ end }}
           <!-- Published month(s) ago -->
           {{ else }}
-              {{ $ageMonths }}个月前
+              {{ if eq .Site.Language.Lang "zh-cn" }}
+                {{ $ageMonths }}个月前
+              {{ else }}
+                {{ $ageMonths }}months ago
+              {{ end }}
           {{ end }}
-           版本: <a href="https://github.com/madawei2699/bmpi.dev/commit/{{ .GitInfo.Hash }}">{{ .GitInfo.AbbreviatedHash }}</a>
+          {{ if eq .Site.Language.Lang "zh-cn" }}
+            版本: <a href="https://github.com/madawei2699/bmpi.dev/commit/{{ .GitInfo.Hash }}">{{ .GitInfo.AbbreviatedHash }}</a>
+          {{ else }}
+            Version: <a href="https://github.com/madawei2699/bmpi.dev/commit/{{ .GitInfo.Hash }}">{{ .GitInfo.AbbreviatedHash }}</a>
+          {{ end }}
         </div>
         {{ end }}
 
