--- a/themes/hugo-coder/layouts/partials/header.html
+++ b/themes/hugo-coder/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <nav class="navigation">
   <section class="container">
-    <a class="navigation-title" href="{{ .Site.BaseURL | relLangURL }}">
+    <a id="site-title" class="navigation-title" href="{{ .Site.BaseURL | relLangURL }}">
       {{ .Site.Title }}
     </a>
     <input type="checkbox" id="menu-toggle" />
