--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -266,6 +266,7 @@
       var typewriter = new Typewriter(title, {
           loop: true,
           delay: 75,
+          cursor: "",
       });
 
       typewriter
