update home page

--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -17,7 +17,7 @@
       ✍️ I write blog posts about topics such as <a href="{{ .RelPermalink }}self/">learning</a>{{ if not (hasPrefix .RelPermalink "/en") }}, {{ else }} and {{ end }}<a href="{{ .RelPermalink }}dev/">development</a>{{ if not (hasPrefix .RelPermalink "/en") }}, and <a href="/money/">trading</a>{{ end }}.<br>
       🎯 I've written <span style="text-decoration:underline;">{{ $scratch.Get "postNum" }}</span> posts totaling <span style="text-decoration:underline;">{{ div ($scratch.Get "total") 1000 }}</span>K words in {{ if not (hasPrefix .RelPermalink "/en") }}Chinese{{ else }}English{{ end }}.<br>
       🚩 My blog has been viewed over <span id="all-page-views" style="text-decoration:underline;"></span>K times by readers in <span id="site-run-days" style="text-decoration:underline;"></span> days.<br>
-      🔨 I enjoy building <a href="https://github.com/madawei2699">open-source</a> software projects like <a href="https://github.com/madawei2699/free4chat">free4chat</a> and <a href="https://github.com/bmpi-dev/invest-alchemy">invest-alchemy</a>.<br>
+      🔨 I enjoy building <a href="https://github.com/madawei2699">open-source</a> software like <a href="https://github.com/madawei2699/myGPTReader">myGPTReader</a>, <a href="https://github.com/madawei2699/free4chat">free4chat</a> and <a href="https://github.com/bmpi-dev/invest-alchemy">invest-alchemy</a>.<br>
       {{ if not (hasPrefix .RelPermalink "/en") }}🤑 I manage an <a href="https://money.bmpi.dev/portfolio?t=bmpi&p=被动收入">ETF portfolio</a> to build passive income.<br>
       📫 Subscribe to my <a href="https://tinyletter.com/bmpi-dev">newsletter</a> and get to know more <a href="/about/">about me</a>.<br>
       ⛽️ I'm focused on achieving my long-term <a href="/goal/">goals</a>.<br>
