--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -5,11 +5,11 @@
       ⚡️
       <a href="https://money.bmpi.dev/">Invest</a>
       ⚡️
+      <a href="https://www.bmpi.dev/_ad/">AD</a>
+      ⚡️
       <a href= {{ relLangURL "tool" }} >Tool</a>
       ⚡️
       <a href= {{ relLangURL "link" }} >Link</a>
-      ⚡️
-      <a href="https://umami.bmpi.dev/share/ilNU9n5W/bmpi.dev">Stats</a>
     </div>
   </div>
   <section class="container">
