--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -563,7 +563,7 @@ a[href$="/money/"] {
   color: #cc5595 !important;
 }
 
-a[href$="https://money.bmpi.dev/"] {
+a[href$="https://www.myinvestpilot.com/"] {
   color: #cc5595 !important;
 }
 
