update home, add mywriter.ink

--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -16,7 +16,7 @@
       👋 Hi, I'm Dawei Ma, a full-stack developer from Earth.<br>
       🎯 I've written <span style="text-decoration:underline;">{{ $scratch.Get "postNum" }}</span> posts totaling <span style="text-decoration:underline;">{{ div ($scratch.Get "total") 1000 }}</span>K words in {{ if not (hasPrefix .RelPermalink "/en") }}Chinese{{ else }}English{{ end }}.<br>
       🚩 My blog has been viewed over <span id="all-page-views" style="text-decoration:underline;"></span>K times by readers in <span id="site-run-days" style="text-decoration:underline;"></span> days.<br>
-      🔨 I'm building 📈 <a href="https://www.chat2invest.com">chat2invest.com</a> 💹 <a href="https://www.myinvestpilot.com/">myinvestpilot.com</a> 📚 <a href="https://www.myreader.io/">myreader.io</a> 💬 <a href="https://www.free4.chat/">free4.chat</a>.<br>
+      🔨 I'm building 📈 <a href="https://www.chat2invest.com">chat2invest.com</a> 💹 <a href="https://www.myinvestpilot.com/">myinvestpilot.com</a> ✏️ <a href="https://www.mywriter.ink/">mywriter.ink</a> 📚 <a href="https://www.myreader.io/">myreader.io</a> 💬 <a href="https://www.free4.chat/">free4.chat</a>.<br>
       {{ if not (hasPrefix .RelPermalink "/en") }}🤑 I'm managing an <a href="https://www.myinvestpilot.com/portfolio?t=bmpi&p=被动收入">ETF portfolio</a> to build passive income.<br>
       ⛽️ I'm focused on achieving my long-term <a href="/goal/">goals</a>.<br>
       📫 Subscribe to my <a href="https://tinyletter.com/bmpi-dev">newsletter</a> and get to know more <a href="/about/">about me</a>.<br>{{ end }}
