--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -1,6 +1,8 @@
 <footer class="footer">
   <div class="footer-taxonomy">
     <div>
+      <a href="https://feed.bmpi.dev">{{ if (hasPrefix .RelPermalink "/en") }} News {{ else }} 消息 {{ end }}</a>
+      ⚡️
       <a href="/talk/">{{ if (hasPrefix .RelPermalink "/en") }} Talk {{ else }} 演讲 {{ end }}</a>
       ⚡️
       <a href="https://www.bmpi.dev/_ad/">{{ if (hasPrefix .RelPermalink "/en") }} AD {{ else }} 广告 {{ end }}</a>
