--- a/themes/hugo-coder/layouts/dev/single.html
+++ b/themes/hugo-coder/layouts/dev/single.html
@@ -44,9 +44,11 @@
         <div class="brand-ad-link-line"></div>
       </div> -->
 
+      <!-- disable google adsense
       <div style="margin-bottom: 1.5rem;opacity: 70%">
         {{ partial "google_adsense.html" . }}
       </div>
+      -->
 
       <div class="article">
         <div class="article-content heti" data-aos="fade-up" data-aos-duration="1500" data-aos-anchor-placement="top-bottom">
