fix Typewriter effect

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -265,7 +265,7 @@
   {{ end }}
 
   {{ if or (eq .RelPermalink "/en/") (eq .RelPermalink "/en/") (eq .RelPermalink "/en") (eq .RelPermalink "/") (eq .RelPermalink "") }}
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/TypeWriter.js/1.0.1/typewriter.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/TypewriterJS/2.21.0/core.min.js"></script>
   <script>
     function setTyperWriterEffect() {
       var title = document.getElementById('site-title');
