add markmap by self host with cdnjs

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -98,7 +98,7 @@
   {{ end }}
 
   {{ if .Params.markmap.enabled }}
-  <script src="/js/markmap-autoloader@0.1.2.min.js"></script>
+  <script src="/js/markmap-autoloader@0.15.4.js"></script>
   <style>
     code[class*="language-"], pre[class*="language-"] {
       text-shadow: none !important;
