--- a/themes/hugo-coder/layouts/self/single.html
+++ b/themes/hugo-coder/layouts/self/single.html
@@ -37,12 +37,15 @@
         </div>
       </header>
 
-      <!-- <div class="brand-ad">
+      <div class="brand-ad">
         <div class="brand-content">
+          <a href="/_ad_cq/" rel="nofollow">
+            <img src="https://img.bmpi.dev/01c9291e-2b16-b3fe-4940-858a13bc0f83.png" />
+          </a>
         </div>
         <div class="brand-ad-link"><a href="/_ad/" rel="nofollow">品牌赞助</a></div>
         <div class="brand-ad-link-line"></div>
-      </div> -->
+      </div>
 
       <!-- disable google adsense
       <div style="margin-bottom: 1.5rem;opacity: 70%">
