update telegram link

--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="footer-taxonomy">
     <div>
-      <a href="https://feed.bmpi.dev">{{ if (hasPrefix .RelPermalink "/en") }} News {{ else }} 消息 {{ end }}</a>
+      <a href="https://t.me/bmpi_group">{{ if (hasPrefix .RelPermalink "/en") }} Telegram {{ else }} 电报 {{ end }}</a>
       ⚡️
       <a href="/talk/">{{ if (hasPrefix .RelPermalink "/en") }} Talk {{ else }} 演讲 {{ end }}</a>
       ⚡️
