--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -3,13 +3,11 @@
     <div>
       <a href="https://t.me/bmpi_group">{{ if (hasPrefix .RelPermalink "/en") }} Telegram {{ else }} 电报 {{ end }}</a>
       ⚡️
+      <a href="https://discord.gg/S9mzJfqfKD">{{ if (hasPrefix .RelPermalink "/en") }} Discord {{ else }} Discord {{ end }}</a>
+      ⚡️
       <a href="/talk/">{{ if (hasPrefix .RelPermalink "/en") }} Talk {{ else }} 演讲 {{ end }}</a>
       ⚡️
-      <a href="https://www.bmpi.dev/_ad/">{{ if (hasPrefix .RelPermalink "/en") }} AD {{ else }} 广告 {{ end }}</a>
-      ⚡️
       <a href= {{ relLangURL "tool" }} >{{ if (hasPrefix .RelPermalink "/en") }} Tool {{ else }} 工具 {{ end }}</a>
-      ⚡️
-      <a href= {{ relLangURL "link" }} >{{ if (hasPrefix .RelPermalink "/en") }} Link {{ else }} 友链 {{ end }}</a>
     </div>
   </div>
   <section class="container">
