--- a/themes/hugo-coder/layouts/money/single.html
+++ b/themes/hugo-coder/layouts/money/single.html
@@ -39,8 +39,8 @@
 
       <div class="brand-ad">
         <div class="brand-content">
-          <a href="/_ad_cq/" rel="nofollow">
-            <img src="https://img.bmpi.dev/01c9291e-2b16-b3fe-4940-858a13bc0f83.png" />
+          <a href="/money/guide-to-open-global-investment-account/">
+            <span>点我在线阅读《全球投资开户完全指南：A股与美股篇》，零成本开启你的全球投资之旅。</span>
           </a>
         </div>
         <div class="brand-ad-link"><a href="/_ad/" rel="nofollow">品牌赞助</a></div>
