--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -5,6 +5,8 @@
       ⚡️
       <a href="https://discord.gg/S9mzJfqfKD">{{ if (hasPrefix .RelPermalink "/en") }} Discord {{ else }} Discord {{ end }}</a>
       ⚡️
+      <a href="/money/guide-to-open-global-investment-account/">{{ if (hasPrefix .RelPermalink "/en") }} Account {{ else }} 开户 {{ end }}</a>
+      ⚡️
       <a href="/talk/">{{ if (hasPrefix .RelPermalink "/en") }} Talk {{ else }} 演讲 {{ end }}</a>
       ⚡️
       <a href= {{ relLangURL "tool" }} >{{ if (hasPrefix .RelPermalink "/en") }} Tool {{ else }} 工具 {{ end }}</a>
