--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -9,7 +9,7 @@
       ⚡️
       <a href="/talk/">{{ if (hasPrefix .RelPermalink "/en") }} Talk {{ else }} 演讲 {{ end }}</a>
       ⚡️
-      <a href= {{ relLangURL "tool" }} >{{ if (hasPrefix .RelPermalink "/en") }} Tool {{ else }} 工具 {{ end }}</a>
+      <a href= "/weeklies" >{{ if (hasPrefix .RelPermalink "/en") }} Weeklies {{ else }} 周记 {{ end }}</a>
     </div>
   </div>
   <section class="container">
