--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -18,7 +18,9 @@
       🚩 My blog has been viewed over <span id="all-page-views" style="text-decoration:underline;"></span>K times by readers in <span id="site-run-days" style="text-decoration:underline;"></span> days.<br>
       🔨 I'm building 📈 <a href="https://www.chat2invest.com">chat2invest.com</a> 💹 <a href="https://www.myinvestpilot.com/">myinvestpilot.com</a> 📚 <a href="https://www.myreader.io/">myreader.io</a>.<br>
       {{ if not (hasPrefix .RelPermalink "/en") }}🤑 I'm managing an <a href="https://www.myinvestpilot.com/portfolio?t=bmpi&p=被动收入">ETF portfolio</a> to build passive income.<br>
-      ⛽️ I'm focused on achieving my long-term <a href="/goal/">goals</a>.{{ end }}
+      ⛽️ I'm focused on achieving my long-term <a href="/goal/">goals</a>.<br>
+      📬 Stay in touch by subscribing to my <a href="https://ld.i365.tech/newsletter/e0b379d3-0be0-4ae5-9fe2-cd972a667cdb">newsletter</a>.
+      {{ end }}
       </div>
   </div>
 </section>
