--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -280,7 +280,7 @@
       .typeString('BMPI')
       .pauseFor(3000)
       .deleteChars(3)
-      .typeString('uild My Personal Insights')
+      .typeString('uild My Personal Intelligence')
       .pauseFor(2000)
       .deleteChars(16)
       .typeString('rogramming Insights')
